--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="messenger__header">
         <div class="messenger__left">
           <p class="messenger__dot">•</p>
-          <p class="messenger__name">MARK ZUKERBERG</p>
+          <p class="messenger__name">mark zuckerberg</p>
         </div>
         <i class="fa-solid fa-xmark messenger__cross"></i>
       </div>
