--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="messenger__message">
             <hr>
             <form action="https://echo.htmlacademy.ru" class="messenger__form" method="post">
-                <input class="messenger__text-sender" type="text" placeholder="Enter your message" name="message">
+                <label for="label_input">
+                  <input class="messenger__text-sender" type="text" placeholder="Enter your message" name="message">
+                </label>
                 <button class="messenger__btn" type="submit">SEND</button>
             </form>
         </div>
