change some p to span

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         </div>
         <ul class="messenger__chat">
           <li class="messenger__chat-item  blue">
-            <p class="messenger__time">10:53</p>
+            <span class="messenger__time">10:53</span>
             <p class="messenger__text-left">Hi,Mark! I made a new design for Messenger App.</p>
           </li>
           <li class="messenger__item-right green">
-            <p class="messenger__time right">10:57</p>
+            <span class="messenger__time right">10:57</span>
             <p class="messenger__text-right">
               Yo! Send ito my assistant and we'll review it during the year.
             </p>
         </li>
         <li class="messenger__chat-item blue-2">
-            <p class="messenger__time">11:03</p>
+            <span class="messenger__time">11:03</span>
             <p class="messenger__text-left">But Mark...</p>
         </li>
         <li class="messenger__chat-item-right red">
