--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
-    
+
     <div class="messenger">
       <div class="messenger__header">
         <div class="messenger__left">
@@ -50,7 +50,7 @@
                 <label for="label_input">
                   <input class="messenger__text-sender" type="text" placeholder="Enter your message" name="message">
                 </label>
-                <button class="messenger__btn" type="submit">SEND</button>
+                <button class="messenger__btn" type="submit">send</button>
             </form>
 
         </div>
