--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="messenger__main">
         <div class="messenger__day">
           <hr />
-          <p class="messenger__today">TODAY</p>
+          <p class="messenger__today">today</p>
           <hr />
         </div>
         <ul class="messenger__chat">
